--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,11 @@
   "name": "memo-muse-api",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only index.ts",
-    "build": "tsc -p tsconfig.json",
-    "start": "node ../dist/index.js"
-  },
+"scripts": {
+  "dev": "ts-node-dev --respawn --transpile-only index.ts",
+  "build": "tsc -p tsconfig.json",
+  "start": "node dist/index.js"
+},
   "dependencies": {
     "arctic": "^3.7.0",
     "bcrypt": "^6.0.0",
