--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
 "scripts": {
-  "dev": "ts-node-dev --respawn --transpile-only index.ts",
+  "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
   "build": "tsc -p tsconfig.json",
   "start": "node dist/index.js"
 },
