--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,18 +1,14 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
+    "target": "ES2020",
     "module": "CommonJS",
-    "moduleResolution": "node",
-    "rootDir": ".",
-    "outDir": "../dist",
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true,
+    "outDir": "dist",
+    "rootDir": "src",
     "strict": true,
-    "declaration": false,
-    "sourceMap": true
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
-  "include": ["**/*.ts"],
-  "exclude": ["node_modules", "../dist"]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
