--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,12 +3,12 @@
     "target": "ES2020",
     "module": "CommonJS",
     "outDir": "dist",
-    "rootDir": "src",
+    "rootDir": ".",   
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src"],
+  "include": ["src", "controller", "routes", "models", "middleware", "config", "utils"],
   "exclude": ["node_modules", "dist"]
 }
