--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,10 @@
   "name": "memo-muse-api",
   "version": "0.1.0",
   "private": true,
-"scripts": {
+ "scripts": {
   "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-  "build": "tsc -p tsconfig.json",
-  "start": "node dist/index.js"
+  "build": "tsc",
+  "start": "node dist/src/index.js"
 },
   "dependencies": {
     "arctic": "^3.7.0",
