--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,14 +1,18 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ES2022",
     "module": "CommonJS",
+    "moduleResolution": "node",
+    "rootDir": ".",
     "outDir": "dist",
-    "rootDir": ".",   
-    "strict": true,
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "strict": true,
+    "declaration": true,
+    "sourceMap": true
   },
-  "include": ["src", "controller", "routes", "models", "middleware", "config", "utils"],
+  "include": ["**/*"],
   "exclude": ["node_modules", "dist"]
 }
